--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="./manifest.json">
-    <title>Portfolio</title>
+    <title>David Alsina Mercier</title>
   </head>
 <body>
   <div id = "root"></div>
