before changing to only html css

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <title>DAVID ALSINA MERCIER</title>
   </head>
 <body>
-  <div class="cursor"></div>
   <div id = "root"></div>
+  <!-- <div class="cursor"></div> -->
+
 </body>
 </html>
