continuation of the migration from react to html css

--- a/ego.html
+++ b/ego.html
@@ -10,12 +10,12 @@
     </div>
     <div class='LeftArrow'>
       <a href="oasis.html">
-        <img src="images/FLETXA_INFO.png" alt="arrow"/> 
+        <img src="./images/FLETXA_INFO.png" alt="arrow"/> 
       </a>
     </div>
     <div class='RightArrow'>
       <a href="lidia.html">
-        <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
+        <img src="./images/FLETXA_INFO_D.png" alt="arrow"/> 
       </a>
     </div>
     <div class="EgoPortada">
@@ -44,11 +44,11 @@
     <div class="VayaEgo">
      
             <div className="Col1Ego">
-              <img src="images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego" style={{paddingBottom:"8px", paddingRight:"8px"}}/>
-              <img src="images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego" style={{paddingTop:"8px", paddingRight:"8px"}}/>
+              <img src="./images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego" style={{paddingBottom:"8px", paddingRight:"8px"}}/>
+              <img src="./images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego" style={{paddingTop:"8px", paddingRight:"8px"}}/>
             </div>
             <div className="Col2Ego">
-            <img src="images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no" style={{paddingLeft:"8px"}} />       
+            <img src="./images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no" style={{paddingLeft:"8px"}} />       
             </div>
          
 
