--- a/oasis.html
+++ b/oasis.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>OASIS</title>
   <link rel="stylesheet" href="./style/oasis.css">  
   <link rel="stylesheet" href="./style/index.css">
 </head>
@@ -9,7 +10,7 @@
       <a href="index.html">DAVID ALSINA MERCIER</a>
     </div>
     <div class='LeftArrow'>
-      <a href="lectura">
+      <a href="lectura.html">
         <img src='./images/FLETXA_INFO.png' alt="arrow"/> 
       </a>
     </div>
@@ -35,7 +36,7 @@
       <img src='./images/Oasis/PNG_KEVIN_OASIS.png' alt="kevin" class='image_on_back'/>
     </div>
     <div class="GifGuion">
-      <video autoPlay muted loop src={guion} alt="guió literari"></video>
+      <video autoPlay muted loop src='images/Oasis/MP4_GUIO_OASIS.mp4' alt="guió literari"></video>
       <p>
         Nos cuenta la historia de Ada, una chica de
         dieciocho años que vive con su madre Bea
@@ -60,11 +61,11 @@
       da sentido a las otras plataformas.
       <br/>
       El perfil de Instagram (
-      <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/oasis.larevista/" style={{textDecoration:"underline"}}>@oasis.larevista</a>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/oasis.larevista/" style="text-decoration: underline;">@oasis.larevista</a>
       ) que encarna la revista
       semanal <i>OASIS</i>, producto del cortometraje.
       <br/>
-      La <a target="_blank" rel="noopener noreferrer" href="https://oasiselproyecto.com/" style={{textDecoration:"underline"}}>página web</a> que 
+      La <a target="_blank" rel="noopener noreferrer" href="https://oasiselproyecto.com/" style="text-decoration: underline;">página web</a> que 
       nos ayuda a conocer la historia más
       profundamente.También ayuda en la promoción del proyecto.
       <br/>
@@ -79,24 +80,24 @@
       <img src='./images/Oasis/PNG_REVISTA4_OASIS.png' alt="revista 4"/>
     </div>
     <div class="OasisProducts">
-      <img alt="Lampara plasma oasis" src={lampara}/>
-      <video autoPlay muted loop src={vacaciones} alt="Vacaciones logo oasis"/>
-      <video autoPlay muted loop src={tele} alt="Tele logo OASIS"/>
-      <video autoPlay muted loop src={rayos} alt="Rayos oasis"/>
-      <img alt="Oasis neon" src={neon}/>
-      <video autoPlay muted loop src={primavera} alt="Primavera"/>  
-      <video autoPlay muted loop src={pastillas} alt="Pastillas logo OASIS"/>
-      <video autoPlay muted loop src={taza} alt="Taza logo OASIS"/>
-      <img alt="Menú calendario mensual" src={menu}/>
+      <img alt="Lampara plasma oasis" src='images/Oasis/PNG_LAMPARA_OASIS.png'/>
+      <video autoPlay muted loop src='images/Oasis/MP4_VACACIONES_OASIS.mp4' alt="Vacaciones logo oasis"></video>
+      <video autoPlay muted loop src='images/Oasis/MP4_TELE_OASIS.mp4' alt="Tele logo OASIS"></video>
+      <video autoPlay muted loop src='images/Oasis/MP4_RAJOS_OASIS.mp4' alt="Rayos oasis"></video>
+      <img alt="Oasis neon" src='images/Oasis/PNG_OASISNEON_OASIS.png'/>
+      <video autoPlay muted loop src='images/Oasis/MP4_PRIMAVERA_OASIS.mp4' alt="Primavera"></video>  
+      <video autoPlay muted loop src='images/Oasis/MP4_PASTILLES_OASIS.mp4' alt="Pastillas logo OASIS"></video>
+      <video autoPlay muted loop src='images/Oasis/MP4_TASSA_OASIS.mp4' alt="Taza logo OASIS"></video>
+      <img alt="Menú calendario mensual" src='images/Oasis/PNG_MENU_OASIS.png'/>
     </div>
     <div class="OasisFilter">
-      <video autoPlay muted loop src={filtro} alt="Video ejemplo del filtro"/>
+      <video autoPlay muted loop src='images/Oasis/MP4_FILTRE_OASIS.mp4' alt="Video ejemplo del filtro"></video>
     </div>
     <div class="OasisHab">
-      <video autoPlay muted loop src={habitacion} alt="Habitación de Ada"/>
+      <video autoPlay muted loop src='images/Oasis/MP4_INSTALACIO_OASIS.mp4' alt="Habitación de Ada"></video>
     </div>
     <div class="EquipoOasis">
-      <img src={equipo} alt="foto del equipo"/>
+      <img src='images/Oasis/PNG_EQUIP_OASIS.png' alt="foto del equipo"/>
     </div>
     <div class="TextoEquipoOasis">
       <p>
