--- a/tresrosas.html
+++ b/tresrosas.html
@@ -19,7 +19,7 @@
       </a>
     </div>
     <div class="PortadaRosas">
-      <img src={portada} alt="Portada Tres Rosas"/>
+      <img src='images/TresRosas/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
       <p>
         <i>TRES ROSAS</i> es un cortometraje de ficción que nace del
         choque cultural en relación a la diversidad sexual.
@@ -28,12 +28,12 @@
       </p>
     </div> 
     <div class="CocheyActriz">
-      <img src={claqueta} alt="coche tres rosas"/>
-      <img src={actriz} alt="actriz tres rosas"/> 
+      <img src='./images/TresRosas/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
+      <img src='./images/TresRosas/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
     </div> 
-    <img src={mesita} alt="mesita" class="Mesa"/>
+    <img src='./images/TresRosas/PNG_TAULETA_TRESROSAS.png' alt="mesita" class="Mesa"/>
     <div class="Lavabo">
-      <img src={wc} alt="actriz en el baño"/>
+      <img src='./images/TresRosas/PNG_LAVABO_TRESROSAS.png' alt="actriz en el baño"/>
     </div>
     <p class="TextoRosas">
     Sexo duro, sadismo y violencia heterosexual matrimonial
@@ -51,9 +51,9 @@
     tres rosas.
     </p>
     <div class="Cajas">
-      <img src={caja} alt="caja tres rosas"/>
+      <img src='./images/TresRosas/PNG_CAIXA_TRESROSAS.png' alt="caja tres rosas"/>
     </div> 
-    <img src={cotxe} alt="coche tres rosas" class="Coche"/>
+    <img src='./images/TresRosas/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
     <div class="EquipoRosas">
     <p >
       <b>Idea, guión y dirección</b>: David Alsina
