--- a/ego.html
+++ b/ego.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>DAVID ALSINA MERCIER </title>    
   <link rel="stylesheet" href="./style/ego.css">  
   <link rel="stylesheet" href="./style/index.css">
 </head>
