--- a/lectura.html
+++ b/lectura.html
@@ -2,6 +2,8 @@
 <head>
   <link rel="stylesheet" href="style/lectura.css">  
   <link rel="stylesheet" href="style/index.css">
+  <title>DAVID ALSINA MERCIER </title>    
+
 </head>
 <body>
 <div>
@@ -28,12 +30,12 @@
       </p>
     </div>
     <div class="Mockups">
-      <img src={mockup1} alt="first mockup"/>
-      <img src={mockup2} alt="second mockup"/>
+      <img src="images/Lectura/PNG_MOCKUP1_LO.png" alt="first mockup"/>
+      <img src="images/Lectura/PNG_MOCKUP2_LO.png" alt="second mockup"/>
     </div>
-    <img src={ojos} alt="ojos" class="Ojos"/>
+    <img src="images/Lectura/PNG_ULLS_LO.png" alt="ojos" class="Ojos"/>
     <div class="Piezas">
-      <img src={figuras} alt="piezas"/>
+      <img src="images/Lectura/PNG_FIGURES_LO.png" alt="piezas"/>
     </div>
     <div class="TextoLO">
       <p>
@@ -43,7 +45,7 @@
         temas y disciplinas.
       </p>
     </div>
-    <ReactPlayer url="https://youtu.be/pFx7qr_dP-Y" class="VideoLO" width="80vw" height="95vh"/>
+    <iframe src="https://www.youtube.com/embed/pFx7qr_dP-Y" class="VideoLO"> </iframe>
 </div>
 </body>
 </html>
