--- a/lidia.html
+++ b/lidia.html
@@ -2,23 +2,60 @@
 <head>
   <link rel="stylesheet" href="./style/lidia.css">  
   <link rel="stylesheet" href="style/index.css">
+  <title>DAVID ALSINA MERCIER </title>    
 </head>
 <body>
-<div>
-    <div class='Name'>
-      <a href="index.html">DAVID ALSINA MERCIER</a>
-    </div>
-    <div class='LeftArrow'>
-      <a href="ego.html">
-        <img src="images/FLETXA_INFO.png" alt="arrow"/> 
-      </a>
-    </div>
-    <div class='RightArrow'>
-      <a href="tresrosas.html">
-        <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
-      </a>
-    </div>
+
+<div class='Name'>
+  <a href="index.html">DAVID ALSINA MERCIER</a>
+</div>
+<div class='LeftArrow'>
+  <a href="ego.html">
+    <img src="images/FLETXA_INFO.png" alt="arrow"/> 
+  </a>
+</div>
+<div class='RightArrow'>
+  <a href="tresrosas.html">
+    <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
+  </a>
 </div>
 
+<img src="images/Lidia/PNG_PORTADA_LIDIAOLIU.png" alt="portada lidia" class="LidiaPortada"/>
+<p class="LidiaText1">
+  <i>LÍDIA OLIU PSICOLOGÍA</i> es un proyecto de
+  branding para la imagen de Lídia Oliu, psicóloga
+  humanista especializada en psicoterapia integrativa
+  y centrada en el crecimiento personal y espiritual.
+</p>
+
+<img src="images/Lidia/PNG_PILARS_LIDIAOLIU.png" alt="pilares proyecto lidia" class="Pilares"/>
+
+<p class="SistemaVisual">
+  Sistema visual creado con 5 puntos, los 5 pilares del proyecto.
+</p>
+
+<video src="images/Lidia/MP4_ANIMACIO_LIDIAOLIU.mp4" autoplay loop muted class="LidiaVideo"></video>
+<p class="Composicion">
+  Composición y animación del texto creando planos orbitales,
+como los planetas.
+</p>
+<img src="images/Lidia/PNG_ISOTIPS_LIDIAOLIU.png" alt="isotips lidia oliu" class="Pilares">
+<img src="images/Lidia/PNG_TARGETES_LIDIAOLIU.png" alt="targetes lidia oliu" class="Pilares">
+
+<div class="LidiaCuad">
+  <img src="images/Lidia/PNG_AISLAMIENTO_LIDIAOLIU.png" alt="aislamiento social">
+  <img src="images/Lidia/PNG_ECOPSICOLOGIA_LIDIAOLIU.png" alt="lidia ecopsicologia">
+  <img src="images/Lidia/PNG_5TIPSEMPATIA_LIDIAOLIU.png" alt="tips para trabajar">
+  <img src="images/Lidia/PNG_EMPATIA_LIDIAOLIU.png" alt="empatia imagen lidia">
+  <img src="images/Lidia/PNG_DISTRAIDXS_LIDIAOLIU.png" alt="distraidos de lo que importa">
+  <img src="images/Lidia/PNG_SONREIR_LIDIAOLIU.png" alt="sonreir estructura cerebral">
+  <img src="images/Lidia/PNG_VOLUNTAD_LIDIAOLIU.png" alt="no todo es cuestion de voluntad">
+  <img src="images/Lidia/PNG_QUEJARTE_LIDIAOLIU.png" alt="si tienes derecho a quejarte">
+  <img src="images/Lidia/PNG_SALUDMENTAL_LIDIAOLIU.png" alt="problemas relacionados salud mental">
+</div>
+<p class="LidiaInstagram">
+  <b>Instagram</b>
+  <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/lidiaoliu.psicologia/" style="text-decoration: underline;">@lidiaoliu.psicologia</a>
+</p>
 </body>
 </html>
