--- a/oasis.html
+++ b/oasis.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>OASIS</title>
+  <title>DAVID ALSINA MERCIER </title>    
   <link rel="stylesheet" href="./style/oasis.css">  
   <link rel="stylesheet" href="./style/index.css">
 </head>
