--- a/tresrosas.html
+++ b/tresrosas.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>DAVID ALSINA MERCIER </title>    
   <link rel="stylesheet" href="./style/tresrosas.css">  
   <link rel="stylesheet" href="./style/index.css">
 </head>
