trying to do ego page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="hover-title">
         <a href="lidia.html">LÍDIA OLIU PSICOLOGÍA<sup>.IMG</sup></a>
       </div>
-      <div class="hover-image"><video autoPlay muted loop alt="lectura obligatoria gif" src='images/Index/MP4_TRESROSAS_HOME.mp4'></video></div>
+      <div class="hover-image"><img alt="lidia oliu gif" src='images/Index/PNG_TARGETES_LIDIAOLIU.png'></div>
       <br/>
       
       <div class="hover-title">
