--- a/ego.html
+++ b/ego.html
@@ -53,7 +53,6 @@
   <img src='./images/Ego/PNG_UPS_EGO.jpg' alt="ups juego ego"/>
 </div>
 <!-- <div class="VayaEgo">
-  
         <div className="Col1Ego">
           <img src="./images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego" style={{paddingBottom:"8px", paddingRight:"8px"}}/>
           <img src="./images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego" style={{paddingTop:"8px", paddingRight:"8px"}}/>
@@ -61,10 +60,21 @@
         <div className="Col2Ego">
         <img src="./images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no" style={{paddingLeft:"8px"}} />       
         </div>
-      
-
-
 </div> -->
+<div class="grid-container">
+  <div class="item1">
+    <img src="./images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego">
+
+  </div>
+  <div class="item2">
+    <img src="./images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego">
+  </div>  
+  <div class="item3">
+    <img src="./images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no">       
+  </div>
+
+</div>
+
 <div class="TegustaEgo">
   <div class="TeGustaImg">
     <img src='./images/Ego/PNG_TEGUSTA_EGO.jpg' alt="te gusta foto"/>
