it should be all done

--- a/ego.html
+++ b/ego.html
@@ -52,24 +52,15 @@
   <img src='./images/Ego/PNG_JOC_EGO.jpg' alt="juego ego"/>
   <img src='./images/Ego/PNG_UPS_EGO.jpg' alt="ups juego ego"/>
 </div>
-<!-- <div class="VayaEgo">
-        <div className="Col1Ego">
-          <img src="./images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego" style={{paddingBottom:"8px", paddingRight:"8px"}}/>
-          <img src="./images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego" style={{paddingTop:"8px", paddingRight:"8px"}}/>
-        </div>
-        <div className="Col2Ego">
-        <img src="./images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no" style={{paddingLeft:"8px"}} />       
-        </div>
-</div> -->
-<div class="grid-container">
-  <div class="item1">
+<div class="VayaEgo">
+  <div class="VayaEgo1">
     <img src="./images/Ego/PNG_VAYA_EGO.jpg" alt="Vaya foto ego">
 
   </div>
-  <div class="item2">
+  <div class="VayaEgo2">
     <img src="./images/Ego/PNG_NARCISO_EGO.jpg" alt="Narciso foto ego">
   </div>  
-  <div class="item3">
+  <div class="VayaEgo3">
     <img src="./images/Ego/PNG_NOHAGAS_EGO.jpg" alt="No hagas lo que no">       
   </div>
 
@@ -102,13 +93,17 @@
   <img src='./images/Ego/PNG_TOXICO_EGO.jpg' alt="ego"/>
   <img src='./images/Ego/PNG_FAQS_EGO.jpg' alt="ego"/>
 </div>
-<!-- <div class="GarantiaEgo">
-  <img src='./images/Ego/PNG_GARANTIA_EGO.jpg' alt="garantia ego" style=paddingRight:"8px"/>
-  <div class="LateralEgo">
-    <img src='./images/Ego/PNG_COMPRADOS_EGO.jpg' alt="juntos" style=paddingBottom:"8px", paddingLeft:"8px"/>
-    <img src='./images/Ego/PNG_VALORACIONES_EGO.jpg' alt="valoraciones ego" style=paddingTop:"8px", paddingLeft:"8px"/>
+<div class="GarantiaEgo">
+  <div class="GarantiaEgo1">
+    <img src='./images/Ego/PNG_GARANTIA_EGO.jpg' alt="garantia ego">
   </div>
-</div> -->
+  <div class="GarantiaEgo2">
+    <img src='./images/Ego/PNG_COMPRADOS_EGO.jpg' alt="juntos">
+  </div>
+  <div class="GarantiaEgo3">
+    <img src='./images/Ego/PNG_VALORACIONES_EGO.jpg' alt="valoraciones ego">
+  </div>
+</div>
 <img src='./images/Ego/PNG_CONTRAPORTADA_EGO.jpg' alt="contraportada" class="EgoContraportada"/>
 </body>
 </html>
