--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
       <div class='Name'>DAVID ALSINA MERCIER</div>
