--- a/lidia.html
+++ b/lidia.html
@@ -13,6 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="./style/lidia.css">  
   <link rel="stylesheet" href="style/index.css">
   <title>DAVID ALSINA MERCIER </title>    
