tres rosas mobile try

--- a/ego.html
+++ b/ego.html
@@ -19,7 +19,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
-<div id="top" class='Name'>
+<div class='Name'>
   <a href="index.html">DAVID ALSINA MERCIER</a>
 </div>
 <div class='LeftArrow'>
