--- a/tresrosas.html
+++ b/tresrosas.html
@@ -19,29 +19,26 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
-<div>
-    <div class='Name'>
-      <a href="index.html">DAVID ALSINA MERCIER</a>
-    </div>
-    <div class='LeftArrow'>
-      <a href="lidia.html">
-        <img src="images/FLETXA_INFO.png" alt="arrow"/> 
-      </a>
-    </div>
-    <div class='RightArrow'>
-      <a href="lectura.html">
-        <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
-      </a>
-    </div>
-    <div class="PortadaRosas">
-      <img src='images/TresRosas/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
-      <p>
-        <i>TRES ROSAS</i> es un cortometraje de ficción que nace del
-        choque cultural en relación a la diversidad sexual.
-        Tergiversa y denuncia parte de la cultura gitana y de la
-        estricta religión.
-      </p>
-    </div> 
+<div class='Name'>
+  <a href="index.html">DAVID ALSINA MERCIER</a>
+</div>
+<div class='LeftArrow'>
+  <a href="lidia.html">
+    <img src="images/FLETXA_INFO.png" alt="arrow"/> 
+  </a>
+</div>
+<div class='RightArrow'>
+  <a href="lectura.html">
+    <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
+  </a>
+</div>
+  <img class="PortadaRosasImg" src='images/TresRosas/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
+  <p class="RosasPrimerTexto">
+    <i>TRES ROSAS</i> es un cortometraje de ficción que nace del
+    choque cultural en relación a la diversidad sexual.
+    Tergiversa y denuncia parte de la cultura gitana y de la
+    estricta religión.
+  </p>
     <div class="CocheyActriz">
       <img src='./images/TresRosas/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
       <img src='./images/TresRosas/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
@@ -84,6 +81,5 @@
       <b>Dirección de sonido</b>: Biel Geli
     </p>
     </div>
-</div>
 </body>
 </html>
