mobile version done of lidia and tresrosas

--- a/oasis.html
+++ b/oasis.html
@@ -33,9 +33,8 @@
         <img src= './images/FLETXA_INFO_D.png' alt="arrow"/> 
       </a>
     </div>
-    <div class='FistPhotosText'>
-      <img src='./images/Oasis/PNG_ADAIBEA_OASIS.png' alt="Ada y Bea"/>
-      <p>
+      <img class="PortadaOasis" src='./images/Oasis/PNG_ADAIBEA_OASIS.png' alt="Ada y Bea"/>
+      <p class="FirstTextOasis">
         <i>OASIS</i> es un proyecto transmedia creado por seis
         estudiantes de la <i>Escuela Universitaria ERAM</i>, que plantea
         una historia sobre el estado de ignorancia consciente como 
@@ -43,8 +42,7 @@
         impiden llegar a la esencia de la realidad, y sobre la dificultad
         de salir de la zona de confort.
       </p>
-      <img src='./images/Oasis/PNG_ADAPLORANT_OASIS.png' alt ="Ada llorando"/>
-    </div>
+      <img class="PortadaOasis2" src='./images/Oasis/PNG_ADAPLORANT_OASIS.png' alt ="Ada llorando"/>
     <div class="Superpuestas">
       <img src= './images/Oasis/PNG_ADABEBENT_OASIS.png' alt="Ada bebiendo cafè"/>
       <img src='./images/Oasis/PNG_KEVIN_OASIS.png' alt="kevin" class='image_on_back'/>
@@ -110,9 +108,7 @@
     <div class="OasisHab">
       <video autoPlay muted loop src='images/Oasis/MP4_INSTALACIO_OASIS.mp4' alt="Habitación de Ada"></video>
     </div>
-    <div class="EquipoOasis">
-      <img src='images/Oasis/PNG_EQUIP_OASIS.png' alt="foto del equipo"/>
-    </div>
+      <img class="EquipoOasis" src='images/Oasis/PNG_EQUIP_OASIS.png' alt="foto del equipo"/>
     <div class="TextoEquipoOasis">
       <p>
         <b>Idea, guión y dirección:</b> David Alsina
