trying to fix some bugs

--- a/oasis.html
+++ b/oasis.html
@@ -111,17 +111,17 @@
       <img class="EquipoOasis" src='images/Oasis/PNG_EQUIP_OASIS.png' alt="foto del equipo"/>
     <div class="TextoEquipoOasis">
       <p>
-        <b>Idea, guión y dirección:</b> David Alsina
+        <b>Idea, guión y dirección:</b><br/> David Alsina
         <br/>
-        <b>Directora de postproducción:</b> Isabel Pérez
+        <b>Directora de postproducción:</b><br/> Isabel Pérez
         <br/>
-        <b>Ayudante de dirección:</b> Lluís Cascales
+        <b>Ayudante de dirección:</b><br/> Lluís Cascales
         <br/>
-        <b>Dirección de arte:</b> Maria Boquera
+        <b>Dirección de arte:</b><br/> Maria Boquera
         <br/>
-        <b>Dirección de producción:</b> Marta Cámara
+        <b>Dirección de producción:</b><br/> Marta Cámara
         <br/>
-        <b>DoP y responsable de transmedia:</b> Pau Simón
+        <b>DoP y responsable de transmedia:</b><br/> Pau Simón
       </p>
     </div>
     
