fixing errors pt 2

--- a/lectura.html
+++ b/lectura.html
@@ -34,15 +34,13 @@
         <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
       </a>
     </div>
-    <div class="PortadaLO">
-      <img src="images/Lectura/PNG_PORTADA_LO.png" alt="portada"/> 
-      <p>
+    <img class="PortadaLO" src="images/Lectura/PNG_PORTADA_LO.png" alt="portada"/> 
+    <p class="PrimerTextoLO">
         <i>LECTURA OBLIGATORIA</i> es un proyecto de diseño y
         motion graphics para un podcast sobre reseñas,
         recomendaciones y discusión de libros de todos los
         géneros.
-      </p>
-    </div>
+    </p>
     <div class="Mockups">
       <img src="images/Lectura/PNG_MOCKUP1_LO.png" alt="first mockup"/>
       <img src="images/Lectura/PNG_MOCKUP2_LO.png" alt="second mockup"/>
