fixing mobile position stuff

--- a/tresrosas.html
+++ b/tresrosas.html
@@ -68,17 +68,17 @@
     <img src='./images/TresRosas/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
     <div class="EquipoRosas">
     <p >
-      <b>Idea, guión y dirección</b>: David Alsina
+      <b>Idea, guión y dirección</b>: <br/> David Alsina
       <br/>
-      <b>Directora de producción</b>: Isabel Pérez
+      <b>Directora de producción</b>:<br/> Isabel Pérez
       <br/>
-      <b>Ayudante de dirección</b>: David Escolano
+      <b>Ayudante de dirección</b>:<br/> David Escolano
       <br/>
-      <b>Dirección de arte</b>: Maria Boquera
+      <b>Dirección de arte</b>:<br/> Maria Boquera
       <br/>
-      <b>Dirección de fotografía</b>: Marta Cámara
+      <b>Dirección de fotografía</b>:<br/> Marta Cámara
       <br/>
-      <b>Dirección de sonido</b>: Biel Geli
+      <b>Dirección de sonido</b>: <br/>Biel Geli
     </p>
     </div>
 </body>
