indenting and organizing code. also modifying mobile version images that didn't resize well

--- a/information.html
+++ b/information.html
@@ -1,71 +1,76 @@
 <!DOCTYPE html>
 <html>
-<head> 
-    <title>DAVID ALSINA MERCIER </title>    
-    <link rel="stylesheet" href="./style/information.css">  
-    <link rel="stylesheet" href="./style/index.css">
-    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+<head>
+  <title>DAVID ALSINA MERCIER </title>
+  <link rel="stylesheet" href="./style/information.css">
+  <link rel="stylesheet" href="./style/index.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
+
 <body>
-    <div>
-        <div class='Back'>
-          <li><a href="index.html">
-            <img src="images/FLETXA_INFO.png" alt="arrow"/>
-          </a></li>
+  <div>
+    <div class='Back'>
+      <li><a href="index.html">
+          <img src="images/FLETXA_INFO.png" alt="arrow" />
+        </a></li>
+    </div>
+    <div class="InfoContent">
+      <div class="InfoText">
+        <p>
+          Diseñador visual enfocado en proyectos editoriales,
+          gráficos, audiovisuales y de dirección de arte.
+        </p>
+        <p>
+          Atraído por el diseño narrativo para personas,
+          con fines sociales y culturales.
+        </p>
+        <p>
+          Interesado en el trabajo de conceptos psicológicos.
+        </p>
+        <div class="Hablamos">
+          ¿Hablamos?
         </div>
-        <div class="InfoContent">
-          <div class="InfoText">
-            <p>
-              Diseñador visual enfocado en proyectos editoriales,
-              gráficos, audiovisuales y de dirección de arte.
-            </p>
-            <p>
-              Atraído por el diseño narrativo para personas, 
-              con fines sociales y culturales.
-            </p> 
-            <p>
-              Interesado en el trabajo de conceptos psicológicos.
-            </p> 
-            <div class="Hablamos">
-              ¿Hablamos?
-            </div>
-          </div>
-          <div class="Lateral" style="flex-direction: column;">
-            <div style="align-items:flex-end">
-              <img src="images/FOTO_INFO.png" alt="prova" class="LateralPic"/>
-            </div>
-            <p style="margin-top:3%"> 
-            
-            +34 628 74 22 02
-            <br/>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/david-alsina-mercier-b824431ba/" style="text-decoration:underline">Linkedin</a>, 
-            <a target="_blank" rel="noopener noreferrer" href="https://www.behance.net/davidalsinamercier" style="text-decoration:underline">Behance</a>
-            <br/>
-            <a href="mailto:davidalsinamercier@gmail.com" target="_blank" rel="noopener noreferrer"><u>davidalsinamercier@gmail.com</u></a>
-            </p>
-            <p class="Desarrollada">
-              Página web desarrollada por <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/clara-gubau-2486ab149" style="text-decoration: underline;">
-              Clara Gubau Gubert
-              </a>
-            </p>
-          </div>
-          </div>
       </div>
+      <div class="Lateral" style="flex-direction: column;">
+        <div style="align-items:flex-end">
+          <img src="images/FOTO_INFO.png" alt="prova" class="LateralPic" />
+        </div>
+        <p style="margin-top:3%">
 
-
-
+          +34 628 74 22 02
+          <br />
+          <a target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/david-alsina-mercier-b824431ba/"
+            style="text-decoration:underline">Linkedin</a>,
+          <a target="_blank" rel="noopener noreferrer" href="https://www.behance.net/davidalsinamercier"
+            style="text-decoration:underline">Behance</a>
+          <br />
+          <a href="mailto:davidalsinamercier@gmail.com" target="_blank"
+            rel="noopener noreferrer"><u>davidalsinamercier@gmail.com</u></a>
+        </p>
+        <p class="Desarrollada">
+          Página web desarrollada por <a target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/clara-gubau-2486ab149" style="text-decoration: underline;">
+            Clara Gubau Gubert
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
