fixing bottom distance mobile and lidia grid

--- a/lectura.html
+++ b/lectura.html
@@ -59,7 +59,9 @@
         temas y disciplinas.
       </p>
     </div>
-    <iframe src="https://www.youtube.com/embed/pFx7qr_dP-Y" class="VideoLO"> </iframe>
+    <div style="margin-bottom: 9%;">
+      <iframe src="https://www.youtube.com/embed/pFx7qr_dP-Y" class="VideoLO"> </iframe>
+    </div>
   </div>
 </body>
 
