--- a/lidia.html
+++ b/lidia.html
@@ -67,12 +67,15 @@
     <img src="images/Lidia/PNG_QUEJARTE_LIDIAOLIU.png" alt="si tienes derecho a quejarte" />
     <img src="images/Lidia/PNG_SALUDMENTAL_LIDIAOLIU.png" alt="problemas relacionados salud mental" />
   </div>
-  <p class="LidiaInstagram">
-    <b>Instagram</b>
-    <br />
-    <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/lidiaoliu.psicologia/"
-      style="text-decoration: underline">@lidiaoliu.psicologia</a>
-  </p>
+  <div class="LidiaInstagram">
+    <p>
+      <b>Instagram</b>
+      <br />
+      <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/lidiaoliu.psicologia/"
+        style="text-decoration: underline">@lidiaoliu.psicologia</a>
+    </p>
+  </div>
+
 </body>
 
 </html>
