--- a/lidia.html
+++ b/lidia.html
@@ -48,7 +48,7 @@
     Sistema visual creado con 5 puntos, los 5 pilares del proyecto.
   </p>
 
-  <video src="images/Lidia/MP4_ANIMACIO_LIDIAOLIU.mp4" autoplay loop muted class="LidiaVideo"></video>
+  <video src="images/Lidia/MP4_ANIMACIO_LIDIAOLIU.mp4" autoplay loop muted playsinline class="LidiaVideo"></video>
   <p class="Composicion">
     Composición y animación del texto creando planos orbitales, como los
     planetas.
