fixing fking shits

--- a/lectura.html
+++ b/lectura.html
@@ -59,8 +59,8 @@
         temas y disciplinas.
       </p>
     </div>
-    <div style="margin-bottom: 9%;">
-      <iframe src="https://www.youtube.com/embed/pFx7qr_dP-Y" class="VideoLO"> </iframe>
+    <div class="VideoLO">
+      <iframe class="VidLO" src="https://www.youtube.com/embed/pFx7qr_dP-Y"> </iframe>
     </div>
   </div>
 </body>
