autoplay mobile version

--- a/oasis.html
+++ b/oasis.html
@@ -49,7 +49,7 @@
     <img src='./images/Oasis/PNG_KEVIN_OASIS.png' alt="kevin" class='image_on_back' />
   </div>
   <div class="GifGuion">
-    <video autoPlay muted loop src='images/Oasis/MP4_GUIO_OASIS.mp4' alt="guió literari"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_GUIO_OASIS.mp4' alt="guió literari"></video>
     <p>
       Nos cuenta la historia de Ada, una chica de
       dieciocho años que vive con su madre Bea
@@ -96,20 +96,20 @@
   </div>
   <div class="OasisProducts">
     <img alt="Lampara plasma oasis" src='images/Oasis/PNG_LAMPARA_OASIS.png' />
-    <video autoPlay muted loop src='images/Oasis/MP4_VACACIONES_OASIS.mp4' alt="Vacaciones logo oasis"></video>
-    <video autoPlay muted loop src='images/Oasis/MP4_TELE_OASIS.mp4' alt="Tele logo OASIS"></video>
-    <video autoPlay muted loop src='images/Oasis/MP4_RAJOS_OASIS.mp4' alt="Rayos oasis"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_VACACIONES_OASIS.mp4' alt="Vacaciones logo oasis"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_TELE_OASIS.mp4' alt="Tele logo OASIS"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_RAJOS_OASIS.mp4' alt="Rayos oasis"></video>
     <img alt="Oasis neon" src='images/Oasis/PNG_OASISNEON_OASIS.png' />
-    <video autoPlay muted loop src='images/Oasis/MP4_PRIMAVERA_OASIS.mp4' alt="Primavera"></video>
-    <video autoPlay muted loop src='images/Oasis/MP4_PASTILLES_OASIS.mp4' alt="Pastillas logo OASIS"></video>
-    <video autoPlay muted loop src='images/Oasis/MP4_TASSA_OASIS.mp4' alt="Taza logo OASIS"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_PRIMAVERA_OASIS.mp4' alt="Primavera"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_PASTILLES_OASIS.mp4' alt="Pastillas logo OASIS"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_TASSA_OASIS.mp4' alt="Taza logo OASIS"></video>
     <img alt="Menú calendario mensual" src='images/Oasis/PNG_MENU_OASIS.png' />
   </div>
   <div class="OasisFilter">
-    <video autoPlay muted loop src='images/Oasis/MP4_FILTRE_OASIS.mp4' alt="Video ejemplo del filtro"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_FILTRE_OASIS.mp4' alt="Video ejemplo del filtro"></video>
   </div>
   <div class="OasisHab">
-    <video autoPlay muted loop src='images/Oasis/MP4_INSTALACIO_OASIS.mp4' alt="Habitación de Ada"></video>
+    <video autoPlay muted loop playsinline src='images/Oasis/MP4_INSTALACIO_OASIS.mp4' alt="Habitación de Ada"></video>
   </div>
   <img class="EquipoOasis" src='images/Oasis/PNG_EQUIP_OASIS.png' alt="foto del equipo" />
   <div class="TextoEquipoOasis">
