fixing .html index

--- a/information.html
+++ b/information.html
@@ -24,7 +24,7 @@
 <body>
   <div>
     <div class='Back'>
-      <li><a href="index.html">
+      <li><a href="/">
           <img src="images/FLETXA_INFO.png" alt="arrow" />
         </a></li>
     </div>
