--- a/lectura.html
+++ b/lectura.html
@@ -24,7 +24,7 @@
 <body>
   <div>
     <div class='Name'>
-      <a href="index.html">DAVID ALSINA MERCIER</a>
+      <a href="/">DAVID ALSINA MERCIER</a>
     </div>
     <div class='LeftArrow'>
       <a href="tresrosas.html">
