--- a/lidia.html
+++ b/lidia.html
@@ -22,7 +22,7 @@
 
 <body>
   <div class="Name">
-    <a href="index.html">DAVID ALSINA MERCIER</a>
+    <a href="/">DAVID ALSINA MERCIER</a>
   </div>
   <div class="LeftArrow">
     <a href="ego.html">
