--- a/tresrosas.html
+++ b/tresrosas.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class='Name'>
-  <a href="index.html">DAVID ALSINA MERCIER</a>
+  <a href="/">DAVID ALSINA MERCIER</a>
 </div>
 <div class='LeftArrow'>
   <a href="lidia.html">
