--- a/oasis.html
+++ b/oasis.html
@@ -22,7 +22,7 @@
 
 <body>
   <div class='Name' style="z-index:6;">
-    <a href="index.html">DAVID ALSINA MERCIER</a>
+    <a href="/">DAVID ALSINA MERCIER</a>
   </div>
   <div class='LeftArrow'>
     <a href="lectura.html">
