--- a/tresrosas/index.html
+++ b/tresrosas/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>DAVID ALSINA MERCIER </title>    
-  <link rel="stylesheet" href="./style/tresrosas.css">  
-  <link rel="stylesheet" href="./style/index.css">
+  <link rel="stylesheet" href="../style/tresrosas.css">  
+  <link rel="stylesheet" href="../style/index.css">
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
