--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br />
 
     <div class="hover-title">
-      <a href="tresrosas">TRES ROSAS<sup>.MOV</sup></a>
+      <a href="tresrosas/">TRES ROSAS<sup>.MOV</sup></a>
     </div>
     <div class="hover-image"><video autoPlay muted loop alt="tres rosas gif"
         src='images/Index/MP4_TRESROSAS_HOME.mp4'></video></div>
